--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>fempire-vue</title>
+  <link href="https://unpkg.com/normalize.css@8.0.0/normalize.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/vue-material@latest/dist/vue-material.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
-  
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
 </body>
 
 </html>
